# can-dbc-pest

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Cargo.lock.msrv  Cargo.toml  LICENSE-MIT  README.md  justfile
.github/workflows/: ci.yml
src/: dbc.pest  lib.rs
tests/: .gitignore  snapshots.rs  snippets.rs
tests/snapshots-dbc-cantools/: BU_BO_REL_.snap  BU_BO_REL_Message.snap  CamelCaseEmpty.snap  abs.snap  add_two_dbc_files_1.snap  add_two_dbc_files_2.snap  attribute_Event.snap  attributes.snap  attributes_relation.snap  bad_message_length.snap  big_numbers.snap  bus_comment.snap  bus_comment_bare.snap  bus_comment_bare_out.snap  choices.snap  choices_issue_with_name.snap  comments_hex_and_motorola_converted_from_sym.snap  cp1252.snap  dump_signal_choices.snap  emc32.snap  empty_choice.snap  empty_ns.snap  fd_test.snap  floating_point.snap  floating_point_use_float.snap  foobar.snap  issue_163_newline.snap  issue_168.snap  issue_184_extended_mux_cascaded.snap  issue_184_extended_mux_cascaded_dumped.snap  issue_184_extended_mux_independent_multiplexors.snap  issue_184_extended_mux_independent_multiplexors_dumped.snap  issue_184_extended_mux_multiple_values.snap  issue_184_extended_mux_multiple_values_dumped.snap  issue_199.snap  issue_199_extended.snap  issue_207_sig_plus.snap  issue_228.snap  issue_62.snap  issue_63.snap  (+38 more)
tests/snapshots/canpy/: DBC_template.snap
tests/snapshots/dbc-cantools/: BU_BO_REL_.snap  BU_BO_REL_Message.snap  CamelCaseEmpty.snap  abs.snap  add_two_dbc_files_1.snap  add_two_dbc_files_2.snap  attribute_Event.snap  attributes.snap  attributes_relation.snap  bad_message_length.snap  big_numbers.snap  bus_comment.snap  bus_comment_bare.snap  bus_comment_bare_out.snap  choices.snap  choices_issue_with_name.snap  comments_hex_and_motorola_converted_from_sym.snap  cp1252.snap  dump_signal_choices.snap  emc32.snap  empty_choice.snap  empty_ns.snap  fd_test.snap  floating_point.snap  floating_point_use_float.snap  foobar.snap  issue_163_newline.snap  issue_168.snap  issue_184_extended_mux_cascaded.snap  issue_184_extended_mux_cascaded_dumped.snap  issue_184_extended_mux_independent_multiplexors.snap  issue_184_extended_mux_independent_multiplexors_dumped.snap  issue_184_extended_mux_multiple_values.snap  issue_184_extended_mux_multiple_values_dumped.snap  issue_199.snap  issue_199_extended.snap  issue_207_sig_plus.snap  issue_228.snap  issue_62.snap  issue_63.snap  (+39 more)
tests/snapshots/oxibus/: bug_dbc-codegen_98.snap  bug_env_var_multiple_nodes.snap
