[package]
name = "can-dbc-pest"
version = "0.7.2"
description = "A Pest-based parser for the DBC format. The DBC format is used to exchange CAN network data."
authors = ["Yuri Astrakhan <YuriAstrakhan@gmail.com>"]
categories = ["embedded", "encoding", "parsing"]
edition = "2021"
exclude = ["/tests/*"]
keywords = ["dbc", "can", "automotive", "ecu"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/oxibus/can-dbc-pest"
rust-version = "1.81"

[features]
default = ["encodings"]
encodings = ["dep:encoding_rs"]

[dependencies]
encoding_rs = { version = "0.8.35", optional = true }
pest = "2.8.3"
pest_derive = "2.8.3"

[dev-dependencies]
insta = "1.46.0"
test_each_file = "0.3.6"

[lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
